Update newman test execution strategy

--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -21,20 +21,48 @@ jobs:
       - name: Run Postman Tests
         run: |
           mkdir -p testResults
+          
+          # Run tests for adding favorites
+          echo "Running Add Favorite tests..."
           newman run "Favorite API Tests - Data Driven.postman_collection.json" \
             -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Add Favorite" \
             --iteration-data "data/post_favorite_test_data.csv" \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export testResults/add_favorite_report.html
+          
+          # Run tests for getting favorites
+          echo "Running Get Favorites tests..."
+          newman run "Favorite API Tests - Data Driven.postman_collection.json" \
+            -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Get Favorites" \
             --iteration-data "data/get_favorite_test_data.csv" \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export testResults/get_favorite_report.html
+          
+          # Run tests for deleting favorites
+          echo "Running Delete Favorite tests..."
+          newman run "Favorite API Tests - Data Driven.postman_collection.json" \
+            -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Delete Favorite" \
             --iteration-data "data/delete_favorite_test_data.csv" \
             --reporters cli,htmlextra \
-            --reporter-htmlextra-export testResults/htmlreport.html
+            --reporter-htmlextra-export testResults/delete_favorite_report.html
+          
+          # Combine all reports into one
+          mkdir -p testResults/combined
+          cp testResults/*.html testResults/combined/
+          mv testResults/combined testResults/htmlreport
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: test-results
-          path: testResults/htmlreport.html
+          path: testResults/htmlreport
           retention-days: 90
 
       - name: Publish Test Results
