--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -20,7 +20,40 @@ jobs:
 
       - name: Run Postman Tests
         run: |
-          newman run "Favorite API Tests - Data Driven.postman_collection.json" -e "Favorite API Environment.postman_environment.json" --reporters cli,htmlextra --reporter-htmlextra-export testResults/htmlreport.html
+          mkdir -p testResults
+          
+          # Run E2E test flow
+          echo "Running E2E flow with Add Favorite..."
+          newman run "Favorite API Tests - Data Driven.postman_collection.json" \
+            -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Add Favorite" \
+            --iteration-data "data/post_favorite_test_data.csv" \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export testResults/add_report.html || true
+            
+          echo "Running Get Favorites..."
+          newman run "Favorite API Tests - Data Driven.postman_collection.json" \
+            -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Get Favorites" \
+            --iteration-data "data/get_favorite_test_data.csv" \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export testResults/get_report.html || true
+            
+          echo "Running Delete Favorites..."
+          newman run "Favorite API Tests - Data Driven.postman_collection.json" \
+            -e "Favorite API Environment.postman_environment.json" \
+            --folder "Authentication" \
+            --folder "Delete Favorite" \
+            --iteration-data "data/delete_favorite_test_data.csv" \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export testResults/delete_report.html || true
+            
+          # Combine all reports
+          mkdir -p testResults/combined
+          cp testResults/*.html testResults/combined/
+          mv testResults/combined testResults/htmlreport
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
