--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -50,15 +50,15 @@ jobs:
             --reporters cli,htmlextra \
             --reporter-htmlextra-export testResults/delete_report.html || true
             
-          # Combine all reports
-          mkdir -p testResults/combined
-          cp testResults/*.html testResults/combined/
-          mv testResults/combined testResults/htmlreport
+
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: test-results
-          path: testResults/htmlreport.html
+          path: |
+            testResults/add_report.html
+            testResults/get_report.html
+            testResults/delete_report.html
           retention-days: 90
